build(core) use fixed version for JDK 25+ tests